# procureiq-v1

./: .env.production.example  .gitignore  README.md  SETUP.md  _test_status.py  _test_upload.py  _test_upload2.py  docker-compose.prod.yml  docker-compose.yml  first-time-setup.bat  railway-backend-env.txt  railway-frontend-env.txt  start-backend.bat  start-frontend.bat  start-uvicorn.bat  test_upload.xlsx
procureiq-backend/: .env.example  Dockerfile  Dockerfile.prod  Procfile  _check_columns.py  _fix_admin.py  _syntax_check.py  alembic.ini  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
procureiq-backend/app/: __init__.py  config.py  main.py
procureiq-backend/app/api/: __init__.py
procureiq-backend/app/core/: cache.py  dependencies.py  middleware.py  security.py
procureiq-backend/app/db/: seed.py  session.py
procureiq-backend/app/intelligence/: __init__.py
procureiq-backend/app/models/: audit.py  base.py  contract.py  ingestion.py  risk.py  savings.py  settings.py  spend.py  supplier.py  user.py
procureiq-backend/app/services/: audit_service.py  contract_service.py  email_service.py  forecast_service.py  health_score_service.py  report_service.py  risk_service.py  savings_service.py  scenario_service.py  settings_service.py  spend_service.py  storage_service.py  supplier_service.py
procureiq-backend/app/tasks/: celery_app.py  ide_tasks.py  report_tasks.py  risk_tasks.py
procureiq-backend/migrations/: env.py
procureiq-backend/migrations/versions/: 001_initial.py  002_phase2_intelligence.py  (+3 more)
procureiq-backend/tests/: __init__.py
(+107 files in other folders)
