[tool.poetry]
name = "procureiq-backend"
version = "1.0.0"
description = "ProcureIQ AI-Powered Procurement Intelligence Platform — Backend"
authors = ["ProcureIQ Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.31.0"
alembic = "^1.13.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.28.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.12"
pandas = "^2.2.0"
numpy = "^2.1.0"
openpyxl = "^3.1.5"
rapidfuzz = "^3.10.0"
boto3 = "^1.35.0"   # MinIO / S3 compatible
pdfplumber = "^0.11.0"
python-docx = "^1.1.0"
slowapi = "^0.1.9"
# celery, redis, prophet, weasyprint excluded from Railway build
# (no broker needed — FastAPI BackgroundTasks handle async jobs)
# (prophet/weasyprint require heavy native compile deps not available on Railway)

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
